--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,9 @@ build/
 ios/.generated/
 ios/Flutter/Generated.xcconfig
 ios/Runner/GeneratedPluginRegistrant.*
+coverage/
+doc/
+
+pubspec.lock
+
+.idea
